# Ebook-conversion-to-Text-for-Machine-Learning

./: ,gitignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Feral.docx  Feral.txt  Jupiter.txt  README.md  Royal.txt  SECURITY.md  changlog.md  common_functions.py  license.txt  main.py  metadata_Jupiter.txt.json  prosepal-contributors-code-of-conduct.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
ebook2text/: __init__.py  _exceptions.py  _logger.py  _namespaces.py  _types.py  abstract_book.py  chapter_check.py  convert_file.py  docx_conversion.py  epub_conversion.py  file_handling.py  ocr.py  pdf_conversion.py  text_conversion.py  text_parser.py  text_utilities.py
ebook2text/docx_conversion/: __init__.py  docx_chapter_splitter.py  docx_converter.py  docx_image_extractor.py  docx_text_extractor.py
ebook2text/ebooklib/: epub.py  utils.py
ebook2text/ebooklib/plugins/: base.py  booktype.py  sourcecode.py  standard.py  tidyhtml.py
ebook2text/epub_conversion/: __init__.py  epub_chapter_splitter.py  epub_converter.py  epub_image_extractor.py  epub_text_extractor.py
ebook2text/pdf_conversion/: __init__.py  _enums.py  pdf_converter.py  pdf_image_extractor.py  pdf_line_logic.py  pdf_text_extractor.py
ebook_conversion/: __init__.py  abstract_book.py  abtract_book.py  chapter_check.py  convert_file.py  docx_conversion.py  epub_conversion.py  logging_config.py  ocr.py  pdf_conversion.py  setup.py
ebooklib/: epub.py
folder/: Jupiter.epub
tests/: conftest.py  test_chapter_check.py  test_docx_conversion.py  test_epub_conversion.py  test_ocr.py  test_pdf_conversion.py  test_pdf_image_helpers.py  test_text_parser.py
tests/test_files/: test_docx.docx  test_docx_with_image.docx  test_epub.epub  test_epub_with_image.epub
tests/unit/: test_docx_conversion.py  test_ebook_conversion.py  test_file_handling.py  test_ocr.py  test_pdf_conversion.py  test_text_conversion.py
