[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook2text"
description = "Convert common book file types to text for machine learning"
readme = "README.md"
authors = [{name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io"}]
license = {text = "MIT"}
requires-python = ">= 3.8"
dependencies = [
    "annotated-types>=0.4.0",
    "anyio>3.5,5",
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.2.2",
    "cffi>=1.12",
    "colorama==0.4.6",
    "cryptography==42.0.7",
    "distro>=1.7,<2",
    "EbookLib==0.18",
    "h11>=0.13,<=0.15",
    "httpcore>1",
    "httpx>=0.23.0,<1",
    "idna>2.8.0,<4",
    "lxml>3.1.0",
    "openai==1.30.1",
    "pillow>=10.2.0",
    "pycparser==2.22",
    "pydantic>1.9,3",
    "pydantic_core==2.18.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
    "six==1.16.0",
    "sniffio>=1.1.0",
    "soupsieve>1.2",
    "tqdm>=4.0.0",
    "typing-extensions>=4.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dynamic = ["version"]

[project.urls]
Respository = "https://github.com/ashrobertsdragon/Ebook-conversion-to-Text-for-Machine-Learning"

[tool.ruff]
line-length = 79
exclude = [".git", "__pycache__",".venv"]
docstring-code-format = true

[tool.flake8]
max_line_length = 79
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.isort]
line_length = 79
multi_line_output = 4
