[project]
name = "ebook2text"
description = "Convert common book file types to text for machine learning"
readme = "README.md"
authors = [{name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "openai>=1.54.3",
    "pdfminer-six>=20240706",
    "pillow>=10.4.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
]
dynamic = ["version"]

[project.urls]
Respository = "https://github.com/ashrobertsdragon/Ebook-conversion-to-Text-for-Machine-Learning"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79
force-exclude = true
exclude = [".git", "__pycache__", ".venv", "ebooklib", "dist", "build", ".vscode", ".egg-info"]

[tool.flake8]
max_line_length = 79
exclude = [".git", "__pycache__", ".venv", "ebooklib", "dist", "build", ".vscode", ".egg-info"]

[tool.isort]
line_length = 79

[tool.mypy]
disable_error_code = "import-untyped"
exclude = "ebooklib"
